Added datagen for entity loot tables