@@ -21,15 +21,18 @@ import java.util.Map;
 import java.util.function.BiConsumer;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
+import java.util.stream.Collectors;
 
 import com.mojang.datafixers.util.Pair;
 import net.minecraft.core.Registry;
 import net.minecraft.data.BuiltinRegistries;
 import net.minecraft.data.DataGenerator;
 import net.minecraft.data.loot.BlockLoot;
+import net.minecraft.data.loot.EntityLoot;
 import net.minecraft.data.loot.LootTableProvider;
 import net.minecraft.data.tags.TagsProvider;
 import net.minecraft.resources.ResourceLocation;
+import net.minecraft.world.entity.EntityType;
 import net.minecraft.world.level.block.Block;
 import net.minecraft.world.level.storage.loot.LootTable;
 import net.minecraft.world.level.storage.loot.ValidationContext;
@@ -57,6 +60,7 @@ import org.infernalstudios.infernalexp.data.providers.recipes.IERecipeProvider;
 import org.infernalstudios.infernalexp.init.IEBiomeTags;
 import org.infernalstudios.infernalexp.init.IEBlockTags;
 import org.infernalstudios.infernalexp.init.IEBlocks;
+import org.infernalstudios.infernalexp.init.IEEntityTypes;
 import org.infernalstudios.infernalexp.init.IEItemTags;
 import org.infernalstudios.infernalexp.init.IEItems;
 import org.infernalstudios.infernalexp.init.IEStructureTags;
@@ -68,6 +72,7 @@ import net.minecraftforge.common.data.ExistingFileHelper;
 import net.minecraftforge.eventbus.api.SubscribeEvent;
 import net.minecraftforge.fml.common.Mod;
 import net.minecraftforge.forge.event.lifecycle.GatherDataEvent;
+import net.minecraftforge.registries.RegistryObject;
 
 @Mod.EventBusSubscriber(modid = InfernalExpansion.MOD_ID, bus = Mod.EventBusSubscriber.Bus.MOD)
 public class IEDataGenerators {
@@ -99,19 +104,38 @@ public class IEDataGenerators {
             @Override
             protected @NotNull List<Pair<Supplier<Consumer<BiConsumer<ResourceLocation, LootTable.Builder>>>, LootContextParamSet>> getTables() {
                 return List.of(
-                    Pair.of(() -> new BlockLoot() {
-                        @Override
-                        protected void addTables() {
-                            IEBlocks.BLOCKS.getLootProviders().forEach(pair -> {
-                                pair.getSecond().accept(this, pair.getFirst());
-                            });
-                        }
+                    Pair.of(
+                        () -> new BlockLoot() {
+                            @Override
+                            protected void addTables() {
+                                IEBlocks.BLOCKS.getLootProviders().forEach(pair -> {
+                                    pair.getSecond().accept(this, pair.getFirst());
+                                });
+                            }
 
-                        @Override
-                        protected @NotNull Iterable<Block> getKnownBlocks() {
-                            return IEBlocks.BLOCKS.getLootProviders().stream().map(pair -> (Block) pair.getFirst().get()).toList();
-                        }
-                    }, LootContextParamSets.BLOCK)
+                            @Override
+                            protected @NotNull Iterable<Block> getKnownBlocks() {
+                                return IEBlocks.BLOCKS.getRegister().getEntries().stream().map(RegistryObject::get).collect(Collectors.toList());
+                            }
+                        },
+                        LootContextParamSets.BLOCK
+                    ),
+                    Pair.of(
+                        () -> new EntityLoot() {
+                            @Override
+                            protected void addTables() {
+                                IEEntityTypes.ENTITY_TYPES.getLootProviders().forEach(pair -> {
+                                    pair.getSecond().accept(this, pair.getFirst());
+                                });
+                            }
+
+                            @Override
+                            protected @NotNull Iterable<EntityType<?>> getKnownEntities() {
+                                return IEEntityTypes.ENTITY_TYPES.getRegister().getEntries().stream().map(RegistryObject::get).collect(Collectors.toList());
+                            }
+                        },
+                        LootContextParamSets.ENTITY
+                    )
                 );
             }
 
